Fix: fix some elemetns being cut off screen

--- a/nebula/static/css/login_register.css
+++ b/nebula/static/css/login_register.css
@@ -10,7 +10,7 @@ footer {
 	position: relative;
 	width: 100%;
 	/* background-color: var(--color-background); */
-	min-height: max(100vh, 600px);
+	min-height: max(100vh, 650px);
 	overflow: hidden;
 }
 
@@ -160,7 +160,7 @@ h3 {
 	background-image: linear-gradient(
 		-45deg,
 		var(--color-primary) 0%,
-		var(--color-tertiary) 100%
+		var(--color-secondary) 100%
 	);
 	transition: 1s ease-in-out;
 	border-radius: 50%;
